Fix: align labels above each other

--- a/public/styles/category-form.css
+++ b/public/styles/category-form.css
@@ -23,13 +23,15 @@ form h2 {
 
 form > div {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 5px;
+  gap: 1rem;
   flex-wrap: wrap;
 }
 
 form > div > label {
   font-size: 2rem;
+  width: 100%;
 }
 
 form > div > input {
